# llm-powered-resume-analyzer

./: README.md  config.ini  fastapi-app.py  interface.py  pyproject.toml  requirements.txt
scripts/: check_cuda.py  install.sh  start.sh
utils/: chatbot_verbosity.py  configuration.py  convert_pdf.py  credentials.json  llm_agent.py  manage_driver.py  retriever.py
